--- a/resources/site.css
+++ b/resources/site.css
@@ -77,6 +77,12 @@ code {
   margin-top: 0.5rem;
 }
 
+.detail {
+  margin-left: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .logo {
   font-size: 2rem;
   font-weight: bold;
