More small style tweaks

--- a/resources/site.css
+++ b/resources/site.css
@@ -74,6 +74,8 @@ code {
 
 .accordion-button:not(.collapsed) {
   color: inherit;
+  background-color: inherit;
+  box-shadow: none;
 }
 
 .accordion-button:not(.collapsed)::after {
