Highlight active card

--- a/resources/site.css
+++ b/resources/site.css
@@ -76,6 +76,10 @@ code {
   background-color: inherit;
 }
 
+.card.active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.50);
+}
+
 .accordion-button {
   padding: 0 0 0 1.5rem;
   background-color: inherit;
