--- a/site.css
+++ b/site.css
@@ -1,5 +1,48 @@
+:root {
+  --accordion-btn-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-right' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
+}
+
+body {
+  background-color: #fcfcfc;
+  display: flex;
+}
+
+h1, h2, h3 {
+  font-family: "Oswald", sans-serif;
+}
+
+h1 {
+  font-size: 4.5rem;
+  margin-left: 2rem;
+}
+
+h2 {
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 code {
+  font-family: "Fira Code", monospace !important;
   color: hsl(210, 11%, 35%);
+}
+
+.main {
+  overflow-y: scroll;
+  height: 100vh;
+  flex: 1 0 0%
+}
+
+.nspace {
+  display: none;
+}
+
+.nspace.active {
+  display: block;
 }
 
 .sym {
@@ -25,4 +68,115 @@ code {
 
 .clz {
   text-decoration: underline;
+}
+
+.card {
+  margin: 1rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  background-color: inherit;
+}
+
+.card.active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.50);
+}
+
+.accordion-button {
+  padding: 0 0 0 1.5rem;
+  background-color: inherit;
+}
+
+.accordion-button.disabled {
+  pointer-events: none;
+  color: #8a8a8a;
+}
+
+.accordion-button:after {
+  position: absolute;
+  left: 0;
+  background-image: var(--accordion-btn-icon);
+}
+
+.accordion-button:not(.collapsed) {
+  color: inherit;
+  background-color: inherit;
+  box-shadow: none;
+}
+
+.accordion-button:not(.collapsed)::after {
+  color: inherit;
+  background-image: var(--accordion-btn-icon);
+  transform: rotate(90deg);
+}
+
+.accordion-item {
+  border: 0;
+  background-color: inherit;
+}
+
+.accordion-body {
+  padding: 0;
+  margin-left: 1rem;
+}
+
+.doc {
+  margin-left: 1rem;
+  margin-top: 0.5rem;
+}
+
+.detail {
+  margin-left: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #202020;
+}
+
+.version {
+  margin-left: 0.5rem;
+  font-size: 0.85rem;
+  color: #8a8a8a;
+}
+
+.sidebar {
+  overflow: scroll;
+  height: 100vh;
+  flex: 0 0 auto;
+  width: 12rem;
+  margin-left: 1rem;
+}
+
+.sidebar-link {
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.pill {
+  font-size: 70%;
+  position: relative;
+  top: -2px;
+}
+
+.pill-c {
+  color: hsl(2, 94%, 80%);
+}
+
+.pill-e {
+  color: hsl(60, 22%, 72%);
+}
+
+.pill-a {
+  color: hsl(25, 86%, 83%);
+}
+
+.pill-d {
+  color: hsl(153, 22%, 60%);
+}
+
+.search {
+  margin: 0.2rem;
+  width: 10rem;
 }
