--- a/site.css
+++ b/site.css
@@ -108,6 +108,10 @@ code {
   transform: rotate(90deg);
 }
 
+.accordion-button:focus {
+  box-shadow: none;
+}
+
 .accordion-item {
   border: 0;
   background-color: inherit;
